changed background pic and buttons color

--- a/app/src/main/res/layout/interface_layout.xml
+++ b/app/src/main/res/layout/interface_layout.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:orientation="vertical"
         android:textSize="30sp">
@@ -25,7 +26,6 @@
 
             <Button
                 android:id="@+id/button_7"
-                app:rippleColor="#BAA1A1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
