--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         app:srcCompat="@drawable/back" />
 
     <include
-        layout="@layout/interface_layout"
+        layout="@layout/interface_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
