--- a/app/src/main/res/layout/interface_main.xml
+++ b/app/src/main/res/layout/interface_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="#FFFAFA"
         android:gravity="center"
         android:orientation="vertical"
-        android:textSize="30sp">
+        android:textSize="25sp">
 
         <EditText
             android:id="@+id/editTextNumber"
@@ -30,8 +30,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="7"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_8"
@@ -39,8 +40,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="8"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_9"
@@ -48,8 +50,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="9"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_multiplication"
@@ -57,8 +60,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:text="x"
-                android:textSize="20sp" />
+                android:backgroundTint="@color/special_buttons"
+                android:text="*"
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -72,8 +76,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="4"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_5"
@@ -81,8 +86,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="5"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_6"
@@ -90,8 +96,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="6"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_minus"
@@ -99,8 +106,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/special_buttons"
                 android:text="-"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -115,8 +123,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="1"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_2"
@@ -124,8 +133,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="2"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_3"
@@ -133,8 +143,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="3"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_plus"
@@ -142,8 +153,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/special_buttons"
                 android:text="+"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -157,8 +169,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/special_buttons"
                 android:text="C"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_0"
@@ -166,8 +179,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/main_buttons"
                 android:text="0"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_dot"
@@ -175,8 +189,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/special_buttons"
                 android:text="."
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/button_division"
@@ -184,8 +199,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/special_buttons"
                 android:text="/"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -194,12 +210,24 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button15"
-                android:layout_width="wrap_content"
+                android:id="@+id/button_delete"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_margin="2dp"
+                android:layout_weight="9"
+                android:backgroundTint="@color/special_buttons"
+                android:text="D"
+                android:textSize="25sp" />
+
+            <Button
+                android:id="@+id/button_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="3"
+                android:backgroundTint="@color/special_buttons"
                 android:text="="
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
     </LinearLayout>
