--- a/app/src/main/res/layout/interface_main.xml
+++ b/app/src/main/res/layout/interface_main.xml
@@ -11,12 +11,12 @@
         android:orientation="vertical"
         android:textSize="25sp">
 
-        <EditText
+        <TextView
             android:id="@+id/editTextNumber"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:ems="10"
-            android:hint="Что нужно посчитать?"
+            android:hint="@string/hint"
             android:inputType="number" />
 
         <LinearLayout
@@ -31,7 +31,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="7"
+                android:text="@string/button7"
                 android:textSize="25sp" />
 
             <Button
@@ -41,7 +41,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="8"
+                android:text="@string/button8"
                 android:textSize="25sp" />
 
             <Button
@@ -51,7 +51,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="9"
+                android:text="@string/button9"
                 android:textSize="25sp" />
 
             <Button
@@ -61,7 +61,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/special_buttons"
-                android:text="*"
+                android:text="@string/button_mult"
                 android:textSize="25sp" />
         </LinearLayout>
 
@@ -77,7 +77,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="4"
+                android:text="@string/button4"
                 android:textSize="25sp" />
 
             <Button
@@ -87,7 +87,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="5"
+                android:text="@string/button5"
                 android:textSize="25sp" />
 
             <Button
@@ -97,7 +97,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="6"
+                android:text="@string/button6"
                 android:textSize="25sp" />
 
             <Button
@@ -107,7 +107,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/special_buttons"
-                android:text="-"
+                android:text="@string/button_minus"
                 android:textSize="25sp" />
 
         </LinearLayout>
@@ -124,7 +124,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="1"
+                android:text="@string/button1"
                 android:textSize="25sp" />
 
             <Button
@@ -134,7 +134,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="2"
+                android:text="@string/button2"
                 android:textSize="25sp" />
 
             <Button
@@ -144,7 +144,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="3"
+                android:text="@string/button3"
                 android:textSize="25sp" />
 
             <Button
@@ -154,7 +154,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/special_buttons"
-                android:text="+"
+                android:text="@string/button_plus"
                 android:textSize="25sp" />
         </LinearLayout>
 
@@ -170,7 +170,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/special_buttons"
-                android:text="C"
+                android:text="@string/button_cancel"
                 android:textSize="25sp" />
 
             <Button
@@ -180,7 +180,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/main_buttons"
-                android:text="0"
+                android:text="@string/button0"
                 android:textSize="25sp" />
 
             <Button
@@ -190,7 +190,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/special_buttons"
-                android:text="."
+                android:text="@string/button_dot"
                 android:textSize="25sp" />
 
             <Button
@@ -200,7 +200,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/special_buttons"
-                android:text="/"
+                android:text="@string/button_div"
                 android:textSize="25sp" />
         </LinearLayout>
 
@@ -216,7 +216,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="9"
                 android:backgroundTint="@color/special_buttons"
-                android:text="D"
+                android:text="@string/button_del"
                 android:textSize="25sp" />
 
             <Button
@@ -226,7 +226,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="3"
                 android:backgroundTint="@color/special_buttons"
-                android:text="="
+                android:text="@string/button_eql"
                 android:textSize="25sp" />
 
         </LinearLayout>
