added special buttons listeners, 4 and 5 listeners

--- a/app/src/main/res/layout/interface_main.xml
+++ b/app/src/main/res/layout/interface_main.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical"
         android:textSize="25sp">
 
-        <TextView
+        <EditText
             android:id="@+id/editTextNumber"
             android:layout_width="300dp"
             android:layout_height="30dp"
@@ -220,7 +220,7 @@
                 android:textSize="25sp" />
 
             <Button
-                android:id="@+id/button_result"
+                android:id="@+id/button_eqls"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
