--- a/app/src/main/res/layout/interface_main.xml
+++ b/app/src/main/res/layout/interface_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:textAlignment="textEnd">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,13 +12,15 @@
         android:orientation="vertical"
         android:textSize="25sp">
 
-        <EditText
-            android:id="@+id/editTextNumber"
+        <TextView
+            android:id="@+id/textField"
             android:layout_width="300dp"
             android:layout_height="30dp"
-            android:ems="10"
             android:hint="@string/hint"
-            android:inputType="number" />
+            android:inputType="number"
+            android:textColor="@color/black"
+            android:textColorHint="#000000"
+            android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="300dp"
