--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="button_text_size">25sp</dimen>
+    <dimen name="text_size">28sp</dimen>
     <dimen name="button_margin">2dp</dimen>
     <dimen name="button_height">55sp</dimen>
     <dimen name="button_width">75sp</dimen>
