--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -2,22 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#FFFAFA">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textField"
         android:textAlignment="textEnd"
+        android:hint="@string/hint"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:hint="@string/hint"
-        android:textColor="@color/black"
         android:textColorHint="#737373"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@id/button_7"
         app:layout_constraintEnd_toEndOf="@id/button_multiplication"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_7"
@@ -176,5 +174,16 @@
         app:layout_constraintTop_toBottomOf="@id/button_0"
         app:layout_constraintEnd_toEndOf="@id/button_division"
         style="@style/buttonsSpecial"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/theme_button"
+        android:layout_margin="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/theme_button"
+        app:layout_constraintTop_toBottomOf="@id/button_delete"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/changeButton"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
