--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.MyCalculator" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#0000CD</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/purple_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -13,4 +13,23 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.MyCalculatorAlternative" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimaryDark">@color/main_buttons</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/raleway_bold</item>
+        <item name="android:background">@drawable/back</item>
+        <item name="android:textViewStyle">@style/textField</item>
+    </style>
+
+    <style name="Theme.MyCalculatorDark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimaryDark">@color/special_buttons_dark</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/raleway_bold</item>
+        <item name="android:layout">@layout/activity_main</item>
+        <item name="android:buttonStyle">@style/buttonsSpecialDark</item>
+        <item name="android:background">@drawable/back_black</item>
+        <item name="android:textViewStyle">@style/textField_dark</item>
+    </style>
+
 </resources>
