--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,7 @@
         <item name="fontFamily">@font/raleway_bold</item>
         <item name="android:background">@drawable/back</item>
         <item name="android:textViewStyle">@style/textField</item>
+        <item name="android:buttonStyle">@style/buttonsMain</item>
     </style>
 
     <style name="Theme.MyCalculatorDark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -27,7 +28,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">@font/raleway_bold</item>
         <item name="android:layout">@layout/activity_main</item>
-        <item name="android:buttonStyle">@style/buttonsSpecialDark</item>
+        <item name="android:buttonStyle">@style/buttonsMainDark</item>
         <item name="android:background">@drawable/back_black</item>
         <item name="android:textViewStyle">@style/textField_dark</item>
     </style>
